back to alpine. arm/x86

--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,8 +1,6 @@
-FROM python:3.7.4-buster
+FROM arm32v6/python:3.7.4-alpine
 
-RUN adduser --disabled-password --gecos '' kisseklyv_user
-
-#RUN adduser -D kisseklyv_user
+RUN adduser -D kisseklyv_user
 
 WORKDIR /home/kisseklyv_user
 
